// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password should change type to text when click on icon 1`] = `
<div
  class="css-afkxkv-Input"
>
  <input
    aria-label="password"
    class="css-1j3bcgk-Input"
    type="text"
  />
  <span
    class="css-c1huft-Input"
  >
    <span
      aria-label="visibility-icon"
      class="css-nym8cz-Password"
    >
      <div />
    </span>
  </span>
</div>
`;

exports[`Password should render the input element with type password 1`] = `
<div
  class="css-afkxkv-Input"
>
  <input
    aria-label="password"
    class="css-1j3bcgk-Input"
    type="password"
  />
  <span
    class="css-c1huft-Input"
  >
    <span
      aria-label="visibility-icon"
      class="css-nym8cz-Password"
    >
      <div />
    </span>
  </span>
</div>
`;
